# Robotics-Manipulator-ComputerVision

arduinobot_ws/install/: local_setup.sh  setup.sh
arduinobot_ws/log/: latest_build
arduinobot_ws/src/arduinobot_controller/: CMakeLists.txt
arduinobot_ws/src/arduinobot_controller/arduinobot_controller/: simple_controller.py
haircutterbot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
haircutterbot/log/: latest_build
haircutterbot/src/haircutterbot_bringup/: CMakeLists.txt  package.xml
haircutterbot/src/haircutterbot_bringup/launch/: simulated_robot.launch.py
haircutterbot/src/haircutterbot_controller/: CMakeLists.txt
haircutterbot/src/haircutterbot_controller/launch/: joystick_teleop.launch.py
haircutterbot/src/haircutterbot_cpp_examples/: CMakeLists.txt
haircutterbot/src/haircutterbot_description/: CMakeLists.txt  package.xml
haircutterbot/src/haircutterbot_firmware/: CMakeLists.txt
haircutterbot/src/haircutterbot_moveit/: CMakeLists.txt
haircutterbot/src/haircutterbot_msgs/: CMakeLists.txt
haircutterbot/src/haircutterbot_opencv/: setup.cfg  setup.py
haircutterbot/src/haircutterbot_py_examples/: setup.cfg  setup.py
haircutterbot/src/haircutterbot_utils/: CMakeLists.txt
install/: local_setup.sh  setup.bash  setup.sh
install/haircutterbot_controller/share/haircutterbot_controller/: haircutterbot_controller.xml  package.dsv  package.sh  package.xml
install/haircutterbot_controller/share/haircutterbot_controller/launch/: controller.launch.py
log/: latest_build
(+224 files in other folders)
